--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@ body {
     margin-bottom: 10px;
 }
 
-.splash-content {
-    background: rgba(255, 255, 255, 0.05); /* Blanco casi invisible */
-    backdrop-filter: blur(8px); /* Desenfoque del fondo */
-    -webkit-backdrop-filter: blur(8px);
-    padding: 40px 60px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 2px;
+    .splash-content h1 {
+    font-weight: 100; /* Super fina */
+    letter-spacing: 15px; /* Mucho espacio entre letras para airear */
+  backdrop-filter: blur(8px); /* Desenfoque del fondo */
+    text-transform: uppercase;
+    font-size: clamp(1.5rem, 6vw, 2.5rem);
+    margin-bottom: 10px;
 }
 
 /* --- HEADER (MENÚ FIJO) --- */
