--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-/* --- RESET Y BASE --- */
-* { margin: 0; padding: 0; box-sizing: border-box; }
+/* { margin: 0; padding: 0; box-sizing: border-box; }
 html { scroll-behavior: smooth; }
 body { 
     background-color: #000; 
@@ -15,28 +14,24 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
-   background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('foto5.jpg');
+    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('foto1.jpg');
     background-size: cover;
     background-position: center;
 }
 
 .splash-content h1 {
-    font-weight: 100; /* Super fina */
-    letter-spacing: 15px; /* Mucho espacio entre letras para airear */
+    font-weight: 200;
+    letter-spacing: 12px;
+    font-size: clamp(1.2rem, 5vw, 2.2rem);
     text-transform: uppercase;
-    font-size: clamp(1.5rem, 6vw, 2.5rem);
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
-    .splash-content h1 {
-    font-weight: 100; /* Super fina */
-    letter-spacing: 15px; /* Mucho espacio entre letras para airear */
-  backdrop-filter: blur(8px); /* Desenfoque del fondo */
-    text-transform: uppercase;
-    font-size: clamp(1.5rem, 6vw, 2.5rem);
-    margin-bottom: 10px;
-}
-
+.splash-content p {
+    font-weight: 400;
+    letter-spacing: 10px;
+    font-size: 0.7rem;
+    opacity: 0.8;
 /* --- HEADER (MENÚ FIJO) --- */
 header {
     position: fixed;
