--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-/* { margin: 0; padding: 0; box-sizing: border-box; }
+/* --- RESET Y BASE --- */
+* { margin: 0; padding: 0; box-sizing: border-box; }
 html { scroll-behavior: smooth; }
 body { 
     background-color: #000; 
@@ -14,7 +15,7 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(foto5.jpg);
+    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('foto1.jpg');
     background-size: cover;
     background-position: center;
 }
@@ -32,6 +33,8 @@ body {
     letter-spacing: 10px;
     font-size: 0.7rem;
     opacity: 0.8;
+}
+
 /* --- HEADER (MENÚ FIJO) --- */
 header {
     position: fixed;
