--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400&display=swap');
 /* --- REGRESO AL DISEÑO ORIGINAL --- */
 * { margin: 0; padding: 0; box-sizing: border-box; }
 
